Fix filter toggle to use server-side filtering, fix icon alignment in filter button

--- a/PPA sourcecode/project/PPA/src/main/resources/static/css/style.css
+++ b/PPA sourcecode/project/PPA/src/main/resources/static/css/style.css
@@ -456,22 +456,30 @@ input[type=checkbox]:disabled
 #SelectPpaMetrics1-filterButton.l-btn>.l-btn-left
 {
 	max-width: 100%;
+	display: inline-flex;
+	align-items: center;
+	height: 32px;
+	padding: 0 !important;
 }
 
-#SelectPpaMetrics1-filterButton.l-btn>.l-btn-left>.l-btn-text
+#SelectPpaMetrics1-filterButton.l-btn .l-btn-icon
 {
-	vertical-align: middle;
-	text-align: center;
-	line-height: 32px;
+	position: static !important;
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	margin: 0 6px 0 0 !important;
+	flex-shrink: 0;
+}
+
+#SelectPpaMetrics1-filterButton.l-btn .l-btn-text
+{
+	display: inline-block;
+	padding-left: 0 !important;
 	font-size: 16px;
 	font-weight: bold;
 	color: #004745;
-}
-
-#SelectPpaMetrics1-filterButton.l-btn>.l-btn-left>.l-btn-icon
-{
-	vertical-align: middle;
-	margin-top: -1px;
+	line-height: normal;
 }
 
 #SelectPpaMetrics1-filterButton.filter-active.l-btn
@@ -480,7 +488,7 @@ input[type=checkbox]:disabled
 	border-color: #004745;
 }
 
-#SelectPpaMetrics1-filterButton.filter-active.l-btn>.l-btn-left>.l-btn-text
+#SelectPpaMetrics1-filterButton.filter-active.l-btn .l-btn-text
 {
 	color: #FFFFFF;
 }
